# qwen3asr4j

./: CMakeLists.txt  LICENSE  README.md  build.gradle  settings.gradle
.github/workflows/: build.yml
gradle/wrapper/: gradle-wrapper.properties
scripts/: convert_hf_to_gguf.py
src/main/cpp/: qwen3asr4j.cpp
src/main/cpp/qwen3asr/include/: audio_encoder.h  forced_aligner.h  gguf_loader.h  mman_multiplatform.h  qwen3_asr.h  stat_multiplatform.h  text_decoder.h
src/main/cpp/qwen3asr/src/: audio_encoder.cpp  forced_aligner.cpp  gguf_loader.cpp  qwen3_asr.cpp  text_decoder.cpp
src/main/java/io/github/jaffe2718/qwen3asr4j/: ForcedAligner.java  GGUFModelWrapper.java  NativeManager.java  ProgressCallback.java  Qwen3ASR.java  TranscribeParams.java  TranscribeResult.java
src/main/java/io/github/jaffe2718/qwen3asr4j/param/: TranscribeParams.java
src/main/java/io/github/jaffe2718/qwen3asr4j/result/: AlignedWord.java  AlignmentResult.java  TranscribeResult.java
src/test/cpp/: test_qwen3asr.cpp
src/test/java/io/github/jaffe2718/qwen3asr4j/: TestQwen3ASR.java
